# maskade-minigame

./: .gitignore  CMakeLists.txt  LICENSE  MakeFile  PROPOSAL.md  README.md
apps/: maskade_app.cpp  maskade_visualizer.cpp
assets/: something.py
assets/converted_savedmodel/: labels.txt
assets/converted_savedmodel/model.savedmodel/variables/: variables.data-00000-of-00001  variables.index
cache/converted_savedmodel/model.savedmodel/variables/: variables.data-00000-of-00001
config/: config.json
include/: CinderOpenCV.hpp  Resources.h  maskade_classifier.hpp
src/: maskade_classifier.cpp
test/: test_maskade_classifier.cpp
